--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: [Presentations]
-description: [A Git Repo of Presentations I have given]
+title: [Presentations of Alexis Lucattini]
+description: [Presentations I have given (likely computer or bioinformatics related)]
+
